Changed the creepy picture on reserveSpot

--- a/genie/web/templates/web/reserveSpot.html
+++ b/genie/web/templates/web/reserveSpot.html
@@ -41,7 +41,7 @@
 						<h2>Reserve a Parking Spot</h2>
 					</header>
 					<div class="box">
-						<span class="image featured"><img src={% static "web/images/parkingGarage1.jpg" %} alt="" /></span>
+						<span class="image featured"><img src={% static "web/images/parkingIvy.jpg" %} alt="" /></span>
 						<!-- Form -->
 								<section class="box">
 									{% if select %}
