Updated lotManagement so admin know who owns the lots

--- a/genie/web/templates/web/lotManagement.html
+++ b/genie/web/templates/web/lotManagement.html
@@ -40,7 +40,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Manage Your Lots</h2>
+						<h2>Manage Lots Owned By {{ user }}</h2>
 						<!-- 
 							1. View all parking spots
 							2. Edit all parking spots
