Revenue is added every time a spot is reserved and shows up on account pages

--- a/genie/web/templates/web/account.html
+++ b/genie/web/templates/web/account.html
@@ -87,10 +87,22 @@
 										</div>
 									</form>
 								</div>
-								{% if user.profile.is_owner %}
+								{% if user.profile.is_owner or user.profile.is_admin %}
 								<h3>Revenue</h3>
 								<div class="col-12 col-12-mobilep">
-									<h4>Current Revenue: ${{revenue}}0</h4>
+									<h4>Total Revenue: ${{revenue}}0</h4>
+									<ul class="alt">
+										{% if user.profile.is_owner %}
+											{% for lot, value in revenueLots.items %}
+												<li>{{ lot }}: ${{ value }}0</li>
+											{% endfor %}
+										{% endif %}
+										{% if user.profile.is_admin %}
+											{% for event, value in revenueEvents.items %}
+												<li>{{ event }}: ${{ value }}0</li>
+												{% endfor %}
+										{% endif %}
+									</ul>
 								</div>
 								{% endif %}
 							</section>
