--- a/genie/web/templates/web/reserveSpot.html
+++ b/genie/web/templates/web/reserveSpot.html
@@ -239,7 +239,7 @@
 												}
 												else {
 													if ("{{preFilledLotId}}" != "")
-														lot = "{{preFilledLotId}}"
+														var lot = "{{preFilledLotId}}"
 														chooseSpots();
 													spotDiv.style.display = "block";
 												}
