--- a/genie/web/templates/web/lotEdit.html
+++ b/genie/web/templates/web/lotEdit.html
@@ -130,8 +130,8 @@
 										<form action="{% url 'web:lot_add_events' parkingLot.id %}" method="post">
 											{% csrf_token %}
 											{% for other_event in other_event_list %}
-												<input type="checkbox" id="{{ other_event.id }}" name="{{ other_event.id }}">
-											<label for="{{ other_event.id }}"><strong>{{ other_event }}:</strong> {{ other_event.date }}</label>
+												<input type="checkbox" id="e{{ other_event.id }}" name="e{{ other_event.id }}">
+											<label for="e{{ other_event.id }}"><strong>{{ other_event }}:</strong> {{ other_event.date }}</label>
 											{% endfor %}
 											<input type="submit" value="Add Events">
 										</form>
@@ -147,8 +147,8 @@
 										<form action="{% url 'web:lot_delete_events' parkingLot.id %}" method="post">
 											{% csrf_token %}
 											{% for event in event_list %}
-												<input type="checkbox" id="{{ event.id }}" name="{{ event.id }}">
-											<label for="{{ event.id }}"><strong>{{ event }}:</strong> {{ event.date }}</label>
+												<input type="checkbox" id="e{{ event.id }}" name="e{{ event.id }}">
+											<label for="e{{ event.id }}"><strong>{{ event }}:</strong> {{ event.date }}</label>
 											{% endfor %}
 											<input type="submit" value="Delete Events">
 										</form>
@@ -186,8 +186,8 @@
 										<form action="{% url 'web:lot_add_attendants' parkingLot.id %}" method="post">
 											{% csrf_token %}
 											{% for other_attendant in other_attendant_list %}
-												<input type="checkbox" id="{{ other_attendant.id }}" name="{{ other_attendant.id }}">
-											<label for="{{ other_attendant.id }}"><strong>{{ other_attendant }}:</strong> {{ other_attendant.user.email }}</label>
+												<input type="checkbox" id="a{{ other_attendant.id }}" name="a{{ other_attendant.id }}">
+											<label for="a{{ other_attendant.id }}"><strong>{{ other_attendant }}:</strong> {{ other_attendant.user.email }}</label>
 											{% endfor %}
 											<input type="submit" value="Add Attendants">
 										</form>
@@ -203,8 +203,8 @@
 										<form action="{% url 'web:lot_delete_attendants' parkingLot.id %}" method="post">
 											{% csrf_token %}
 											{% for attendant in attendant_list %}
-												<input type="checkbox" id="{{ attendant.id }}" name="{{ attendant.id }}">
-											<label for="{{ attendant.id }}"><strong>{{ attendant }}:</strong> {{ attendant.user.email }}</label>
+												<input type="checkbox" id="a{{ attendant.id }}" name="a{{ attendant.id }}">
+											<label for="a{{ attendant.id }}"><strong>{{ attendant }}:</strong> {{ attendant.user.email }}</label>
 											{% endfor %}
 											<input type="submit" value="Delete Attendants">
 										</form>
