--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -117,7 +117,7 @@
 						</header>
 					</section>
 
-					<section class="box special">
+					<section class="box special" id="currentRes">
 
 							<h3>Current Upcoming Reservations</h3>
 							<ul class="alt">
