about link added to SignUp.html

--- a/genie/web/templates/web/signUp.html
+++ b/genie/web/templates/web/signUp.html
@@ -28,6 +28,7 @@
 					<h1>Big Blue's Parking Genie</h1>
 					<nav id="nav">
 						<ul>
+							<li><a href={% url "web:about" %}>About</a></li>
 							<li><a href={% url "web:home"%}>Home</a></li>
 							<li><a href="#cta" class="button">Sign Up</a></li>
 							<li><a href="https://github.com/palani-johnson/TheDjinns-Group10" class="icon brands fa-github"><span class="label">Github</span></a></li>	
