added links between lot pages

--- a/genie/web/templates/web/lotEdit.html
+++ b/genie/web/templates/web/lotEdit.html
@@ -317,6 +317,16 @@
 							</div>
 						</form>
 					</section>
+					<div class="row gtr-50 gtr-uniform aln-center">
+						<!--
+						<div class="col-3 col-12-mobilep">
+							<a href="{-% url 'web:lot-info' %-}" class="button">View Lot Details</a>
+						</div>
+						-->
+						<div class="col-12-mobilep">
+							<a href="{% url 'web:lots' %}" class="button">View All Lots</a>
+						</div>
+					</div>
 				</section>
 
 			<!-- Footer -->
