Changed lot link to just show lot name

--- a/genie/web/templates/web/reserveSpot.html
+++ b/genie/web/templates/web/reserveSpot.html
@@ -279,7 +279,7 @@
 																	</thead>
 																	<tbody>
 																		<tr>
-																			<td name='lot' value='{{lot.id}}'><a href='#'>{{lot}}</a></td> <!-- Link to lot map page here -->
+																			<td name='lot' value='{{lot.id}}'>{{lot}}</td> <!-- Link to lot map page here -->
 																			<td name='spotId' value='{{spot.id}}'>{{spot.spotType}}</td>
 																			<td name='eventId'>{{event.date | date}}</td>
 																			<td>${{spot.price|floatformat:2}}</td>
