added page links and lot attendant add/remove logic

--- a/genie/web/templates/web/lotInfo.html
+++ b/genie/web/templates/web/lotInfo.html
@@ -142,7 +142,7 @@
 									<p>Assign new attendants; edit parking types and prices.</p>
 									<br />
 									<ul class="actions special">
-										<li><a href={% url "web:lots" %} class="button special">Edit this Lot</a></li>
+										<li><a href={% url "web:lotEdit" lot.id %} class="button special">Edit this Lot</a></li>
 									</ul>
 								</section>
 
